BRA-28: Build the rulebook's Expansion rules, Additional modules chapter

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -936,6 +936,147 @@
           </article>
         </article>
       </section>
+
+      <section id="additional_modules" class="chapter">
+        <figure class="h1">
+          <img src="images/rulebook/expansion/additional-heading.png" alt="Additional Modules">
+        </figure>
+        <article class="inner_content">
+          <p>
+            These are the rules of four new “modules”.<br>
+            Each module can be added to the base game or to the Hunt Expansion on its own, or combined with the other modules for even more excitement! The game follows all of the normal rules from Barbarians: The Invasion, except for the following changes.<br>
+            New “modules” can be played with any map.
+          </p>
+        </article>
+
+        <article id="personal_objectives" class="inner_content">
+          <h2>Personal Objectives</h2>
+          <p>
+            Before step 1 of the Setup, shuffle the 5 Personal Objective cards and randomly deal one to each player face-down. Players can look at their Personal Objective but cannot show it to the others. Return the unused Personal Objectives to the gamebox.
+          </p>
+          <p>
+            There are two ways to use Personal Objectives. They can be either:<br>
+            - Conserved to score additional Domination points at the end of the game, for meeting the criteria indicated on the card.<br>
+            <i>OR</i><br>
+            - Discarded to gain an immediate bonus; a player can discard their Personal Objective at any time during their own turn, before or after placing a Champion. The player then gains the bonus indicated on the bottom of the card. Return any discarded Personal Objectives to
+            the gamebox; they won’t be used again in this game.
+          </p>
+          <figure>
+            <img src="images/rulebook/expansion/personal-example-1.jpg" alt="Personal Example #1">
+          </figure>
+          <p>
+            <b>End game scoring:</b> Score 1/3/7/12/18/23 Domination points if at the end of the game your Honor track disc has advanced further than 1/2/3/4/5/6 Milestones, respectively. (e.g.: If your disc on the Honor track has advanced further than 3 Milestones at the end of the game, you score 7 Domination points).<br>
+            <b>Immediate bonus:</b> Discard this card to immediately advance your Honor track disc by 4 spaces on the Honor track.
+          </p>
+          <figure>
+            <img src="images/rulebook/expansion/personal-example-2.jpg" alt="Personal Example #2">
+          </figure>
+          <p>
+            <b>End game scoring:</b> Score 2/7/14/20 Domination points if you have 1/2/3/4 pairs of “Building
+            card + God or Warchief card” respectively, at the end of the game.
+            (e.g.: If you have 3 Buildings, 3 Gods and 2 Warchiefs at the end of the game, you score 14 Domination points).<br>
+            <b>Immediate bonus:</b> Discard this card to immediately take the top card of the Building, God or Warchief deck without paying any cost.
+          </p>
+          <figure>
+            <img src="images/rulebook/expansion/personal-example-3.jpg" alt="Personal Example #3">
+          </figure>
+          <p>
+            <b>End game scoring:</b> Score 2/7/14/20 Domination points if at the end of the game you collected 1/2/3/4 different Faction tokens, respectively. (e.g.: If you have 2 Nefriar Faction tokens and 3 Aspidian Faction tokens at the end of the game, you score 7 Domination points).<br>
+            <b>Immediate bonus:</b> Discard this card to immediately perform a War action. If you win the war, double the Domination points indicated on the Faction token conquered.
+          </p>
+          <figure>
+            <img src="images/rulebook/expansion/personal-example-4.jpg" alt="Personal Example #4">
+          </figure>
+          <p>
+            <b>End game scoring:</b> Score 2/7/14/20 Domination points if at the end of the game you
+            have your Tactics Knowledge discs on the right-most space of 1/2/3/4 Tactics Knowledge tracks respectively.
+            (e.g.: If you have 4 Nefriar Knowledge points, 4 Aspidian Knowledge points and 2 Varg
+            Knowledge points at the end of the game, you score 7 Domination points).<br>
+            <b>Immediate bonus:</b> Discard this card to immediately gain 2 Tactics Knowledge points.
+          </p>
+          <figure>
+            <img src="images/rulebook/expansion/personal-example-5.jpg" alt="Personal Example #5">
+          </figure>
+          <p>
+            <b>End game scoring:</b> Score 2/7/14/20 Domination points if at the end of the game you have your Barbarian Knowledge discs on the right-most space of 1/2/3/4 Knowledge tracks respectively.
+            (e.g.: If you have 4 Discovery Knowledge points, 4 Production Knowledge points and 2 Defense Knowledge points at the end of the game, you score 7 Domination points).<br>
+            <b>Immediate bonus:</b> Discard this card to immediately gain 2 Barbarian Knowledge points.
+          </p>
+        </article>
+
+        <article id="personal_objectives" class="inner_content">
+          <h2>Special Buildings</h2>
+          <p>
+            Before step 4 of the Setup, add these Building cards to the Buildings deck.
+          </p>
+          <ul class="icons_list">
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion/special-buildings-1.jpg" alt="Special building #1">
+              <p>
+                Gain 1 Domination point and 1 Resource of your choice.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion/special-buildings-2.jpg" alt="Special building #2">
+              <p>
+                Gain 1 troop of your choice.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion/special-buildings-3.jpg" alt="Special building #3">
+              <p>
+                Gain 1 Barbarian or Tactics Knowledge of your choice.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion/special-buildings-4.jpg" alt="Special building #4">
+              <p>
+                Advance by 1 step on the Honor track.
+              </p>
+            </li>
+          </ul>
+          <p>
+            At the end of the game, each of these Buildings scores 1 Domination point for every Milestone that your Honor track counter has passed.
+          </p>
+        </article>
+
+        <article id="havoc_maker_tokens" class="inner_content">
+          <h2>Havoc Maker Tokens</h2>
+          <p>
+            Before step 2 of the Setup, shuffle the Havoc Maker tokens and randomly place one of them on each Milestone of the Honor track. These new bonuses replace the Milestone bonuses of the base game.
+          </p>
+        </article>
+
+        <article id="additional_demons_feasts" class="inner_content">
+          <h2>Additional Demons and Feasts</h2>
+          <p>
+            Before step 5 of the Setup, add these Demon and Feast cards to the Demon and Feast decks of the base game.
+          </p>
+          <ul class="icons_list">
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion/demons-feasts-1.jpg" alt="Demons Feasts #1">
+              <p>
+                You may discard one of your Warchief cards, without performing its effect, to immediately double the current number of all your troops on your player gameboard.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/expansion/demons-feasts-2.jpg" alt="Demons Feasts #2">
+              <p>
+                You may lose 2 Domination points to immediately activate all your Building cards, regardless of your Production Knowledge.
+              </p>
+            </li>
+          </ul>
+        </article>
+
+        <article id="havoc_maker_tokens" class="inner_content">
+          <h2>Kickstarter Exclusive Map</h2>
+          <p>
+            Use this map in place of the Fenian map of the base game.<br>
+            This exclusive map features some unique maritime routes that connect very distant islands.<br>
+            <i>All the rules are the same as the base game.</i>
+          </p>
+        </article>
+      </section>
     </div>
   </div>
   <script src="findAndReplaceDOMText.js"></script>
