BRA-29: Build the rulebook's Expansion rules, One-player rules chapter

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -1077,6 +1077,150 @@
           </p>
         </article>
       </section>
+
+      <section id="one_player_rules" class="chapter">
+        <figure class="h1">
+          <img src="images/rulebook/expansion/oneplayer-heading.png" alt="One-Player Rules">
+        </figure>
+
+        <article id="one_player_setup" class="inner_content">
+          <h2>Set Up</h2>
+          <p>
+            The setup is the same as the base game, except for the following changes:
+          </p>
+          <p>
+            <b>2a.</b> Set up the map.<br>
+            Return the faction tokens in the regions marked “3+” and “4+” to the gamebox.
+          </p>
+          <p>
+            <b>4a.</b> Randomly draw 10 God, 10 Warchief and 14 Building cards; and shuffle them all together in a single deck. Place this deck close to the gameboard. Return all the other cards to the gamebox. Now reveal the top 7 cards and place them in a row beside the deck. This forms the display area.
+          </p>
+          <p>
+            <b>6a.</b> Take the Champions of one non-player color and place those Champions on four random action spaces of the Volcano, one in each ring.
+          </p>
+          <p>
+            <b>7a.</b> Draw a random God card from the unused God cards and keep it face up. Then advance your Domination point counter by the amount indicated on the top-right corner of that God card.
+          </p>
+          <p>
+            <b>8a.</b> In any order, stack your Honor track counter and the Honor track counter of the non-player color on the starting space of the Honor track.
+          </p>
+          <p>
+            <b>9a.</b> Place 2 of your Knowledge discs in the leftmost space of two different Knowledge tracks or 1 disc in the second space of a single Knowledge track.
+          </p>
+          <p>
+            <b>10a.</b> Shuffle the Fate cards and form a deck face-down beside your player gameboard.
+          </p>
+          <p>
+            <b>11a.</b> Choose the difficulty of your game:<br>
+            Easy: 80 Domination Points<br>
+            Normal: 100 Domination Points<br>
+            Hard: 130 Domination Points<br>
+            Insane: 150 Domination Points<br>
+            Custom: Choose on your own.<br>
+            Record: The highest number of Domination Points you scored in a solo-game.
+          </p>
+        </article>
+
+        <article id="one_player_game_flow" class="inner_content">
+          <h2>Game Flow</h2>
+          <p>
+            The game follows the same rules as the base game, except for the following changes:
+          </p>
+          <p>
+            The game lasts a maximum of 6 Eras, with each Era running the same way.<br>
+            Pre-phase<br>
+            1st Phase: Maintenance<br>
+            2nd Phase: Action<br>
+            3rd Phase: End of Era
+          </p>
+          <article id="pre_phase" class="inner_subcontent">
+            <h4>Pre-phase</h4>
+            <p>
+              Before the Maintenance phase, shuffle the Fate deck and draw the top card.
+              Then immediately resolve all the effects indicated, from top to bottom.
+            </p>
+            <div class="text_around_image_right">
+              <img class="wrapped_card" src="images/rulebook/expansion/prephase.jpg" alt="Pre-phase example">
+              <ul>
+                <li>
+                  Move the non-player color Champions by either 0, 1 or 2 action spaces in clockwise or counter-clockwise direction.
+                </li>
+                <li>
+                  Place (or advance) the nonplayer color Knowledge discs on the indicated track by the amount of steps indicated.<br>
+                  <i>If a Knowledge disc reaches the last space of a track before you do, it will prevent you from taking the first player bonus.</i>
+                </li>
+                <li>
+                  Discard to the bottom of the deck the cards of the display marked with a red slash.
+                </li>
+                <li>
+                  Advance the non-player color Honor counter on the Honor track by the number of steps indicated.
+                </li>
+                <li>
+                  Check the Map to identify the regions targetable by the non-player color. They must respect these conditions:
+                  <ul>
+                    <li>
+                      The region is adjacent to an already conquered region — it doesn’t matter if it was conquered by you or by a non-player color — or to the starting region.
+                    </li>
+                    <li>
+                      The region has a Faction token on it.
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+              <p>
+                Among the targetable regions, pick the one with the Faction token of the left-most Faction indicated. In case there are none, look for the second left-most Faction indicated, and so on until you find a valid Faction token.<br>
+                In case there are multiple valid Faction tokens, pick the one with the highest Domination point value.
+                Place a non-player color Banner on that region, and return the Faction token to the gamebox.
+              </p>
+            </div>
+            <div class="note">
+              <p>
+                Note: The regions with a non-player color Banner are considered regions conquered by another player.
+              </p>
+            </div>
+          </article>
+          <article id="one_player_end_of_era" class="inner_subcontent">
+            <h4>3rd. Phase: End of Era</h4>
+            <p>
+              Before the first step of this phase, slide the remaining cards of the display to the left of the row to fill in the empty card spaces. Draw new cards and place them in the right-most space of the row until there are 7 cards in the display.
+            </p>
+          </article>
+        </article>
+
+        <article id="one_player_setup" class="inner_content">
+          <h2>Game End</h2>
+          <article id="one_player_final_scoring" class="inner_subcontent">
+            <h4>Final Scoring</h4>
+            <p>
+              If the non-player color Honor counter is further than yours on the Honor track, lose Domination points equal to the difference between the two Honor counters.
+            </p>
+            <p>
+              At the end of the final scoring, if you have more Domination Points than the difficulty level chosen in the beginning, you win. <i>Otherwise, your Clan succumbs to Fate.</i>
+            </p>
+          </article>
+        </article>
+
+        <article id="one_player_special_rules" class="inner_content">
+          <h2>Special Rules</h2>
+          <article id="one_player_final_scoring" class="inner_subcontent">
+            <h4>Drawing a card</h4>
+            <p>
+              Every time you have to draw the top card of a specific deck, instead look through the deck of cards — without revealing them — until you find a card of the type you were looking for, and take it.
+            </p>
+            <div class="note">
+              <p>
+                Note: Do not change the order of the cards in the deck.
+              </p>
+            </div>
+          </article>
+          <article id="one_player_final_scoring" class="inner_subcontent">
+            <h4>Discarding a card</h4>
+            <p>
+              Every time you have to draw the top card of a specific deck, instead look through the deck of cards — without revealing them — until you find a card of the type you were looking for, and take it.
+            </p>
+          </article>
+        </article>
+      </section>
     </div>
   </div>
   <script src="findAndReplaceDOMText.js"></script>
