BRA-31: Build the rulebook's reference chapter

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -1222,6 +1222,174 @@
         </article>
       </section>
     </div>
+
+    <div class="rulebook_reference">
+      <section id="reference" class="chapter">
+        <figure class="h1">
+          <img src="images/rulebook/reference/reference-heading.png" alt="Reference">
+        </figure>
+        <article class="inner_content">
+          <ul class="icons_list">
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/reference/slash.png" alt="Slash icon">
+              <p>
+                You must choose to perform the effect on the right or the effect on the left of the slash.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/reference/arrow.png" alt="Arrow icon">
+              <p>
+                Pay the cost on the left of the arrow to perform the effect on the right.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/reference/resources.png" alt="Three Resources icon">
+              <p>
+                Gain any three resources of your choice.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/reference/troops.png" alt="Troops icon">
+              <p>
+                Gain any three troops of your choice.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/reference/shield.png" alt="Shield icon">
+              <p>
+                This symbol refers to Faction tokens you have.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/reference/volcano.png" alt="Volcano icon">
+              <p>
+                Rotate the Volcano ring where you place (or have placed) the Champion this turn by 1 step in any direction.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/reference/crown.png" alt="Crown icon">
+              <p>
+                Advance 1 step on the Honor track.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/reference/domination-points.png" alt="Domination points icon">
+              <p>
+                Gain the Domination Points indicated.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/game_flow/god.png" alt="God icon">
+              <p>
+                Take one of the God cards from the display.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/game_flow/warchief.png" alt="Warchief icon">
+              <p>
+                Take one of the Warchief cards from the display.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/game_flow/war.png" alt="War icon">
+              <p>
+                Immediately perform a War action.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/game_flow/building.png" alt="Building icon">
+              <p>
+                Choose one of the Building cards available on the display.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/reference/building-card.png" alt="Building card icon">
+              <p>
+                Take the top card of the Building deck without paying its cost. Apply all the other normal rules for Building cards.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/reference/god-warchief-card.png" alt="God Warchief icon">
+              <p>
+                Take the top card of the Warchief deck or the God deck without paying any cost. Apply all the other normal rules for Warchief and God cards.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/game_flow/barbarians-knowledge.png" alt="Barbarians knowledge icon">
+              <p>
+                Advance one of your discs on a Barbarian Knowledge Track by 1 space, or place one of your Knowledge discs on the leftmost space of a Barbarians track where you are not already present.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/game_flow/tactics-knowledge.png" alt="Tactics knowledge icon">
+              <p>
+                Advance one of your discs on a Tactics Knowledge Track by 1 space, or place one of your Knowledge discs on the leftmost space of a Tactics track where you are not already present.
+              </p>
+            </li>
+          </ul>
+        </article>
+
+        <article id="reference_demons" class="inner_content">
+          <h2>Demons</h2>
+          <figure>
+            <img src="images/rulebook/reference/demons-1.jpg" alt="Demons example #1">
+          </figure>
+          <p>
+            You may pay 5 resources of your choice to perform two Barbarian Knowledge actions or two Tactics Knowledge actions.
+          </p>
+          <figure>
+            <img src="images/rulebook/reference/demons-2.jpg" alt="Demons example #2">
+          </figure>
+          <p>
+            You may discard one of your God cards to immediately advance your counter 3 spaces on the Honor Track and gain a fourth Champion. Use this fourth Champion in the next Era.
+          </p>
+          <figure>
+            <img src="images/rulebook/reference/demons-3.jpg" alt="Demons example #3">
+          </figure>
+          <p>
+            You may pay 3 Gold to place one of your Banners in a region, following standard rules for choosing a region (see War section on page 7), and gain Domination points as if you have conquered that region by a war action.<br>
+            <i>Note: This is not a war action: do not recruit troops or fight any battles.</i>
+          </p>
+          <figure>
+            <img src="images/rulebook/reference/demons-4.jpg" alt="Demons example #4">
+          </figure>
+          <p>
+            You may pay 1 troop of each kind to gain 8 Domination points.
+          </p>
+        </article>
+
+        <article id="reference_banner_scoring" class="inner_content">
+          <h2>Banner Scoring</h2>
+          <p>
+            Each player scores points for each group of regions they conquered:
+          </p>
+          <div class="banner_scoring">
+            <ul class="banner_scoring-regions">
+              <li>Regions in a group:</li>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+              <li>4</li>
+              <li>5</li>
+              <li>6</li>
+              <li>7</li>
+              <li>8</li>
+            </ul>
+            <ul class="banner_scoring-domination">
+              <li>Domination points:</li>
+              <li>0</li>
+              <li>1</li>
+              <li>4</li>
+              <li>9</li>
+              <li>16</li>
+              <li>25</li>
+              <li>36</li>
+              <li>49</li>
+            </ul>
+          </div>
+        </article>
+      </section>
+    </div>
   </div>
   <script src="findAndReplaceDOMText.js"></script>
   <script src="searchAPI.js"></script>
