BRA-39: Build the rulebook's credits chapter

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -1390,6 +1390,95 @@
         </article>
       </section>
     </div>
+
+    <div class="rulebook_credits">
+      <section id="credits" class="chapter">
+        <div class="u-flex_center">
+          <h2>CREDITS</h2>
+        </div>
+        <figure>
+          <img src="images/rulebook/credits/divider.png" alt="Divider">
+        </figure>
+        <article class="inner_content">
+          <article class="inner_subcontent">
+            <h6>Art</h6>
+            <ul class="blank_list">
+              <li>Valentina Biagiotti - Graphics</li>
+              <li>Ivan Cavini - Illustrations</li>
+              <li>Massimo Fratini - Graphics & Artwork</li>
+              <li>Carlo Giannetti - Graphics & Artwork</li>
+              <li>Alessio Rapini - Graphics & Web Design</li>
+            </ul>
+          </article>
+          <article class="inner_subcontent">
+            <h6>Business</h6>
+            <ul class="blank_list">
+              <li>Daniele Sepioni - Accounting</li>
+              <li>Andrea Veracchi - Accounting</li>
+            </ul>
+          </article>
+          <article class="inner_subcontent">
+            <h6>Game Design</h6>
+            <ul class="blank_list">
+              <li>Martino Chiacchiera - Game Design</li>
+              <li>Marta Ciaccasassi - Game Design</li>
+              <li>Pierluca Zizzi - Game Design</li>
+            </ul>
+          </article>
+          <article class="inner_subcontent">
+            <h6>Marketing</h6>
+            <ul class="blank_list">
+              <li>Andrea Bellezza - Marketing & PM</li>
+              <li>Leonardo Bertinelli - Marketing & Production</li>
+              <li>Kiersten Goza - Community Management</li>
+              <li>Matteo Piselli - Social Media Strategist</li>
+              <li>Alessandro Veracchi - Production & PM</li>
+            </ul>
+          </article>
+          <article class="inner_subcontent">
+            <h6>Sculpting</h6>
+            <ul class="blank_list">
+              <li>Federico Frenguelli - 3D Modeling</li>
+              <li>LNS - 3D Modeling</li>
+            </ul>
+          </article>
+          <article class="inner_subcontent">
+            <h6>Translation</h6>
+            <ul class="blank_list">
+              <li>Vertogroup - Rules Translations</li>
+            </ul>
+          </article>
+          <article class="inner_subcontent">
+            <h6>Video Making</h6>
+            <ul class="blank_list">
+              <li>Dromostudio - Video Production</li>
+            </ul>
+          </article>
+          <article class="inner_subcontent">
+            <h6>Special Thanks</h6>
+            <ul class="blank_list">
+              <li>Hydra Games</li>
+              <li>Radio Gente Nerd</li>
+              <li>Corrado Bertoldi</li>
+              <li>Silvano Cerza</li>
+              <li>Matteo Cianchetti</li>
+              <li>Alessandro De Angelis</li>
+              <li>Federico Dolce</li>
+              <li>Blake Goza</li>
+              <li>Francesco Marcantonini</li>
+              <li>Gioele Meoni</li>
+              <li>Gaia Preite</li>
+              <li>Luca Treppaoli</li>
+            </ul>
+          </article>
+        </article>
+        <article class="inner_content">
+          <figure class="u-margin_auto u-half_width">
+            <img src="images/rulebook/credits/end.png" alt="End">
+          </figure>
+        </article>
+      </section>
+    </div>
   </div>
   <script src="findAndReplaceDOMText.js"></script>
   <script src="searchAPI.js"></script>
