BRA-27: Build the rulebook's Components chapter

--- a/src/pages/rulebook.html
+++ b/src/pages/rulebook.html
@@ -737,6 +737,160 @@
           </div>
         </article>
       </section>
+
+      <section id="components" class="chapter">
+        <figure class="h1">
+          <img src="images/rulebook/components/components-heading.png" alt="Components">
+        </figure>
+        <article class="inner_content">
+          <ul class="icons_list">
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-gameboard.png" alt="Gameboard">
+              <p>
+                <b>1 Gameboard</b><br>
+                The centerpiece of the game. It contains the Volcano, Knowledge tracks, the Honor track and the Domination points track to mark the progress of every clan.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-volcano.png" alt="Volcano">
+              <p>
+                <b>1 Volcano</b><br>
+                (4 plastic pieces and 4 cardboard cutout rings).<br>
+                Where the players place their Champions to perform actions and play out their strategy.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-map.png" alt="Map">
+              <p>
+                <b>1 Map of Fenian</b><br>
+                Represents the civilized territories that will be invaded by the Barbarian clans.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-tokens.png" alt="Faction Tokens">
+              <p>
+                <b>20 Faction tokens</b> (5 for each faction)<br>
+                Represent the decaying cities of the civilizations you will conquer.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-region-cards.png" alt="Region Cards">
+              <p>
+                <b>72 Region cards</b> (18 for each kind of region: glacier, forest, mountain and swamp)<br>
+                Represent the battles a clan must face to win a War. They vary depending on the nature of the terrain.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-conquer-tiles.png" alt="Conquer Tiles">
+              <p>
+                <b>5 First Conquer tiles</b><br>
+                Gained by the first player who conquers a region on a new island.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-buildings-cards.png" alt="Building Cards">
+              <p>
+                <b>25 Building cards</b><br>
+                Generate a constant income of resources for players who erect them, and give Domination points at the end of the game.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-gods-cards.png" alt="God Cards">
+              <p>
+                <b>16 God cards</b><br>
+                Give additional powers to players who invoke them. They can be activated once per turn.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-warchiefs-cards.png" alt="Warchief Cards">
+              <p>
+                <b>16 Warchief cards</b><br>
+                Allow players who sacrifice them to gain an immediate boost, or can be used to fight in battle.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-feast-cards.png" alt="Feast Cards">
+              <p>
+                <b>4 Feast cards</b><br>
+                Every clan has the opportunity to choose one of their effects at the end of odd Eras.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-demons-cards.png" alt="Demon Cards">
+              <p>
+                <b>4 Demon cards</b><br>
+                Every clan deals with one of these cards at the end of even Eras.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-player-gameboard.png" alt="Player Gameboards">
+              <p>
+                <b>4 Player Gameboards</b><br>
+                The 5 tracks on the left are used to mark the player’s available resources. The 3 tracks on the right are used to mark army troops.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-champions.png" alt="Champions">
+              <p>
+                <b>16 Champions</b> (4 per player)<br>
+                <span class="u-brown_text"><i>Meeples in place of miniatures. </i>(Only for Wooden edition)</span><br>
+                Placed on the Volcano to perform actions.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-resource-tokens.png" alt="Resource Tokens">
+              <p>
+                <b>20 Resource tokens</b> (1 Food, 1 Wood, 1 Iron, 1 Stone and 1 Gold per player)<br>
+                <span class="u-brown_text"><i>Round tokens in place of miniatures. </i>(Only for Wooden edition)</span><br>
+                Used to track resources.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-banners.png" alt="Banners">
+              <p>
+                <b>32 Banners</b> (8 Banners per player)<br>
+                <span class="u-brown_text"><i>Square tokens in place of miniatures. </i>(Only for Wooden edition)</span><br>
+                Used to track regions conquered.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-colored-bases.png" alt="Colored Bases">
+              <p>
+                <b>52 Coloured bases</b> (13 per player. Used with Champions and Banners for the Iron Edition of this game)
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-troops.png" alt="Troop Tokens">
+              <p>
+                <b>12 Troop tokens</b> (1 Archer, 1 Berserker and 1 Raider per player)<br>
+                <span class="u-brown_text"><i>Round tokens in place of miniatures. </i>(Only for Wooden edition)</span><br>
+                Used to track troops.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-knowledge.png" alt="Knowledge discs">
+              <p>
+                <b>32 Knowledge discs</b> (8 per player)<br>
+                Used to track knowledge.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-domination-point.png" alt="Domination Point Counters">
+              <p>
+                <b>4 Domination point counters</b> (1 per player)<br>
+                Used to track Domination points.
+              </p>
+            </li>
+            <li class="icons_list-item">
+              <img class="icon" src="images/rulebook/components/c-honor-track.png" alt="Honor Track discs">
+              <p>
+                <b>4 Honor track discs</b> (1 per player)<br>
+                Used to track Honor points.
+              </p>
+            </li>
+          </ul>
+        </article>
+      </section>
     </div>
 
     <div class="rulebook_expansion">
